Added CSS to the template

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -5,13 +5,22 @@
     <script >
       %s 
     </script>
+    <style>
+      %s
+    </style>
     <title>Hello from Flask</title>
   </head>
 
   <body>
-    <h1>Hello, Pymoo!</h1>
 
-    <div id="plot-container"></div>
+    <div class="page-wrapper">
+
+      <h1>pymoo Dashboard</h1>
+
+      <div id="plot-container"></div>
+
+    </div>
+
 
   </body>
 
