Have the overview table set up

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -17,6 +17,8 @@
 
       <h1>pymoo Dashboard</h1>
 
+      <div id="overview-tab-wrapper"></div>
+
       <div id="plot-container"></div>
 
     </div>
