--- a/Dashboard.html
+++ b/Dashboard.html
@@ -17,7 +17,11 @@
 
       <h1>pymoo Dashboard</h1>
 
-      <div id="overview-tab-wrapper"></div>
+      <div id="widget-wrapper">
+        <div id="overview-tab-wrapper" class="widget"></div>
+
+      </div>
+
 
       <div id="plot-container"></div>
 
