--- a/Dashboard.html
+++ b/Dashboard.html
@@ -16,24 +16,26 @@
   <body>
 
     <div id="app" class="page-wrapper">
-      <h1>{{ message }}</h1>
-      <p>Count is: {{ counter.count }}</p>
 
       <h1>pymoo Dashboard</h1>
+      {{tableWidgets.size}}
       <div id="widget-wrapper">
-        <div id="overview-tab-wrapper" class="widget"></div>
+        <div v-for="(tableContent, title) in tableWidgets" id="overview-tab-wrapper" class="widget">
+          <h2>
+            {{title}}
+          </h2>
+          <table id="overview-tab">
+            <tr class="overview-tab-r" v-for="(val, key) in tableContent">
+              <td class="tab-item-key">{{key}}</td>
+              <td class="tab-item-val">{{val}}</td>
+            </tr>
+          </table>
+        </div>
 
       </div>
 
-
       <div id="plot-container"></div>
     </div> 
-
-
-
-    <!--<script type="module" >
-    </script>-->
-
       
   </body>
 
