Fixing a broken import URL

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -5,7 +5,7 @@
     <style>
       %s
     </style>
-    <script src="https://unpkg.com/vue@next"></script>
+    <script src="https://unpkg.com/vue@3.4.21"></script>
 
     <script type="module">
       %s 
